// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`failure() should fail 1`] = `
Object {
  "children": null,
  "message": "Should always fail",
  "path": "",
}
`;

exports[`failure() should support custom message 1`] = `
Object {
  "children": null,
  "message": "Custom message",
  "path": "",
}
`;
